tests/ui/public_fragment_reintroduction.stderr
error[E0425]: cannot find type `Fragment` in module `hibana::g::advanced`
 --> tests/ui/public_fragment_reintroduction.rs:2:55
  |
2 |     let _ = core::mem::size_of::<hibana::g::advanced::Fragment<()>>();
  |                                                       ^^^^^^^^ not found in `hibana::g::advanced`
